# oreboot

./: Cargo.toml  Makefile  Makefile.inc  Makefile.mainboard.inc
Documentation/img/: firmware-matryoshka.drawio
payloads/src/payload/: payload.rs
src/arch/src/riscv64/sbi/: execute.rs  runtime.rs
src/drivers/uart/src/: debug_port.rs  sunxi.rs
src/mainboard/amd/romecrb/src/: main.rs
src/mainboard/asrock/a300m-stx/: Cargo.toml  Makefile  link.ld  patch.go  start.S
src/mainboard/asrock/a300m-stx/src/: acpi.rs  bootblock.S  interrupts.rs  main.rs  mainboard.rs  msr.rs
src/mainboard/emulation/qemu-riscv/: Cargo.toml
src/mainboard/emulation/qemu-riscv/src/: main.rs
src/mainboard/milk-v/duo-s/bt0/: Makefile  build.rs
src/mainboard/milk-v/duo-s/main/: Makefile
src/mainboard/starfive/visionfive1/bt0/: Cargo.toml  Makefile  build.rs  flash.sh  start.S
src/mainboard/starfive/visionfive1/bt0/src/: init.rs  log.rs  main.rs
src/mainboard/starfive/visionfive2/: Makefile  README.md  board.dts  ethernet.md  kernel.md  run.sh
src/mainboard/starfive/visionfive2/bt0/: build.rs
src/mainboard/sunxi/nezha/: Makefile  fixed-dtfs.dts  linux.config  start.S
src/mainboard/sunxi/nezha/bt0/: Cargo.toml  build.rs
src/mainboard/sunxi/nezha/main/: build.rs
src/mainboard/sunxi/nezha/src/: main.rs
src/soc/: Cargo.toml
src/soc/amd/common/boot/src/: lib.rs  (+1 more)
src/soc/amd/picasso/src/: lib.rs
src/soc/src/sunxi/d1/: uart.rs
src/soc/sunxi/d1/src/: ccu.rs  gpio.rs
xtask/src/: main.rs  target.rs  util.rs
xtask/src/starfive/: visionfive2.rs
xtask/src/sunxi/: nezha.rs
(+25 files in other folders)
